Fix responsive design errors on small screen

--- a/app/globals.css
+++ b/app/globals.css
@@ -12,9 +12,9 @@
   }
 }
 
-body {
+/* body {
   padding-bottom: 40px;
-}
+} */
 
 @layer utilities {
   .text-balance {
